--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,14 +37,15 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.google.firebase:firebase-database:16.0.5'
-    implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation "com.google.firebase:firebase-auth:$firebase_version"
+    implementation "com.google.firebase:firebase-database:$firebase_version"
+    implementation "com.google.firebase:firebase-storage:$firebase_version"
 
     //Moxi
     implementation 'com.arello-mobile:moxy:1.5.5'
     implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
     implementation 'com.arello-mobile:moxy-android:1.5.5'
+    implementation 'com.android.support:support-v4:28.0.0'
     kapt 'com.arello-mobile:moxy-compiler:1.5.5'
 
     //RxJava
@@ -61,7 +62,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     //Image loader
-    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     //Tests
     testImplementation 'junit:junit:4.12'
