--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '2.0.0' // Updated Kotlin version
-    ext.firebase_version = "32.3.1" // Updated Firebase version
+    ext {
+        kotlin_version = '1.9.22' // Updated Kotlin version
+        firebase_version = "32.7.2" // Updated Firebase version
+        gradle_version = '8.2.2' // Updated Gradle version
+    }
     repositories {
         google()
-        mavenCentral() // Replaced jcenter() with mavenCentral()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.0' // Ensure compatibility
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.15' // Updated Google Services plugin
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.4.1' // Updated Google Services plugin
     }
 }
 
 allprojects {
     repositories {
         google()
-        mavenCentral() // Replaced jcenter() with mavenCentral()
+        mavenCentral()
+        maven { url 'https://jitpack.io' } // Added for Moxy support
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
